Remove BackgroundTaskService and perform related cleanups
The BackgroundTaskService and its associated tests were deleted, along with related cleanups and refactoring across the codebase. This includes renaming CleanupTask to CleanupJournalTask and consolidating constants. Adjustments were also made to error-handling in multiple handler classes.